--- a/themes/orbit/src/style/bootstrap/_variables.scss
+++ b/themes/orbit/src/style/bootstrap/_variables.scss
@@ -1,6 +1,6 @@
 // insert own variables here
 $theme-colors: (
-  'primary': #1384c4,
+  'primary': #1ba4f1,
   'secondary': #5e6366,
 ) !default;
 // add other settings below this line
